fix scrollbar flashing

--- a/src/styles/transition/build-preview.css
+++ b/src/styles/transition/build-preview.css
@@ -3,5 +3,5 @@
 }
 
 .build-preview-leave-active {
-  @apply opacity-0 absolute;
+  @apply h-0 opacity-0 w-0 absolute;
 }
